--- a/index.html
+++ b/index.html
@@ -1,23 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="style.css">
-<meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Awesome Animation</title>
-    <link rel="stylesheet" href="style.css"> </head>
-<body>
-    <div class="animation-container">
-        <div class="animated-element"></div>
-    </div>
+    <title>Circle Animation</title>
+    <style>
+        body {
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f0f0;
+        }
 
-    <script>
-        // Optional: You can add JavaScript for more complex animations or interactions
-        // For example:
-        // const animatedElement = document.querySelector('.animated-element');
-        // animatedElement.addEventListener('click', () => {
-        //     animatedElement.classList.toggle('another-animation');
-        // });
-    </script>
+        .circle-container {
+            position: relative;
+            width: 200px;
+            height: 200px;
+        }
+
+        .circle {
+            position: absolute;
+            border-radius: 50%;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+        }
+
+        .circle1 {
+            border: 2px solid #007bff;
+            animation: pulse 2s infinite;
+        }
+        .circle2 {
+            border: 2px solid #28a745;
+            animation: pulse 2s infinite 0.5s;
+        }
+        .circle3 {
+            border: 2px solid #dc3545;
+            animation: pulse 2s infinite 1s;
+        }
+
+        @keyframes pulse {
+            0% {
+                transform: scale(0.8);
+                opacity: 0;
+            }
+            50% {
+                transform: scale(1.2);
+                opacity: 1;
+            }
+            100% {
+                transform: scale(0.8);
+                opacity: 0;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="circle-container">
+        <div class="circle circle1"></div>
+        <div class="circle circle2"></div>
+        <div class="circle circle3"></div>
+    </div>
 </body>
 </html>
