--- a/index.html
+++ b/index.html
@@ -3,65 +3,98 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Circle Animation</title>
+    <title>Sweet Compliments</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
     <style>
-        body {
+        /* Basic Reset */
+        * {
             margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        /* Body Styling */
+        body {
+            font-family: 'Dancing Script', cursive; /* Apply cursive font */
             display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f0f0f0;
+            justify-content: center; /* Center horizontally */
+            align-items: center; /* Center vertically */
+            min-height: 100vh; /* Full viewport height */
+            /* Creative background: Pink to purple gradient */
+            background: linear-gradient(135deg, #ffc0cb, #ba55d3); /* Pink to Medium Orchid */
+            overflow: hidden; /* Hide potential overflows */
+            color: #ffffff; /* White text color for contrast */
         }
 
-        .circle-container {
-            position: relative;
-            width: 200px;
-            height: 200px;
+        /* Container for the text lines */
+        .text-container {
+            text-align: center;
+            padding: 20px;
         }
 
-        .circle {
-            position: absolute;
-            border-radius: 50%;
-            width: 100%;
-            height: 100%;
-            opacity: 0;
+        /* Styling for each line of text */
+        .text-line {
+            display: block; /* Each line on its own row */
+            font-size: 2.5rem; /* Adjust size as needed */
+            margin-bottom: 15px; /* Space between lines */
+            opacity: 0; /* Start hidden */
+            transform: translateY(20px); /* Start slightly lower */
+            /* Animation properties */
+            animation: fadeInSlideUp 1.5s ease-out forwards; /* Name, duration, easing, fill-mode */
         }
 
-        .circle1 {
-            border: 2px solid #007bff;
-            animation: pulse 2s infinite;
-        }
-        .circle2 {
-            border: 2px solid #28a745;
-            animation: pulse 2s infinite 0.5s;
-        }
-        .circle3 {
-            border: 2px solid #dc3545;
-            animation: pulse 2s infinite 1s;
-        }
-
-        @keyframes pulse {
-            0% {
-                transform: scale(0.8);
-                opacity: 0;
+        /* Keyframes for the fade-in and slide-up animation */
+        @keyframes fadeInSlideUp {
+            to {
+                opacity: 1; /* Fade in */
+                transform: translateY(0); /* Move to original position */
             }
-            50% {
-                transform: scale(1.2);
-                opacity: 1;
+        }
+
+        /* Staggering the animation delays for each line */
+        /* We use :nth-child to target each line specifically */
+        .text-line:nth-child(1) {
+            animation-delay: 0.5s; /* First line appears after 0.5s */
+        }
+        .text-line:nth-child(2) {
+            animation-delay: 2.0s; /* Second line appears after 2.0s */
+        }
+        .text-line:nth-child(3) {
+            animation-delay: 3.5s; /* Third line appears after 3.5s */
+        }
+        .text-line:nth-child(4) {
+            animation-delay: 5.0s; /* Fourth line appears after 5.0s */
+        }
+        .text-line:nth-child(5) {
+            animation-delay: 6.5s; /* Fifth line appears after 6.5s */
+        }
+        .text-line:nth-child(6) {
+            animation-delay: 8.0s; /* Sixth line appears after 8.0s */
+        }
+
+        /* Responsive font size */
+        @media (max-width: 600px) {
+            .text-line {
+                font-size: 1.8rem; /* Smaller font on smaller screens */
             }
-            100% {
-                transform: scale(0.8);
-                opacity: 0;
+        }
+         @media (max-width: 400px) {
+            .text-line {
+                font-size: 1.5rem; /* Even smaller font */
             }
         }
     </style>
 </head>
 <body>
-    <div class="circle-container">
-        <div class="circle circle1"></div>
-        <div class="circle circle2"></div>
-        <div class="circle circle3"></div>
+    <div class="text-container">
+        <span class="text-line">You are so sweet</span>
+        <span class="text-line">You are so kind</span>
+        <span class="text-line">You are so adorable</span>
+        <span class="text-line">You are so amazing</span>
+        <span class="text-line">You are so funny JSJSJS</span>
+        <span class="text-line">You are so beautiful</span>
     </div>
 </body>
 </html>
