--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sweet Compliments</title>
+    <title>Sweet Compliments - Enhanced</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
@@ -22,10 +22,19 @@
             justify-content: center; /* Center horizontally */
             align-items: center; /* Center vertically */
             min-height: 100vh; /* Full viewport height */
-            /* Creative background: Pink to purple gradient */
-            background: linear-gradient(135deg, #ffc0cb, #ba55d3); /* Pink to Medium Orchid */
+            /* Darker, animated gradient background */
+            background: linear-gradient(135deg, #8A2BE2, #C71585, #4b0082); /* Blue Violet -> Medium Violet Red -> Indigo */
+            background-size: 200% 200%; /* Make gradient larger than the body to allow movement */
+            animation: animateGradient 15s ease infinite; /* Animate the gradient */
             overflow: hidden; /* Hide potential overflows */
-            color: #ffffff; /* White text color for contrast */
+            color: #ffffff; /* White text color */
+        }
+
+        /* Keyframes for the background gradient animation */
+        @keyframes animateGradient {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
         }
 
         /* Container for the text lines */
@@ -37,52 +46,55 @@
         /* Styling for each line of text */
         .text-line {
             display: block; /* Each line on its own row */
-            font-size: 2.5rem; /* Adjust size as needed */
-            margin-bottom: 15px; /* Space between lines */
+            font-size: 2.8rem; /* Slightly larger font */
+            margin-bottom: 18px; /* Space between lines */
             opacity: 0; /* Start hidden */
-            transform: translateY(20px); /* Start slightly lower */
+            /* Start slightly lower and smaller */
+            transform: translateY(25px) scale(0.9);
+            /* Add a subtle glow effect */
+            text-shadow: 0 0 5px rgba(255, 255, 255, 0.7),
+                         0 0 10px rgba(255, 192, 203, 0.5); /* White and Pink glow */
             /* Animation properties */
-            animation: fadeInSlideUp 1.5s ease-out forwards; /* Name, duration, easing, fill-mode */
+            animation: fadeInSlideUpScale 1.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards; /* Name, duration, easing, fill-mode */
         }
 
-        /* Keyframes for the fade-in and slide-up animation */
-        @keyframes fadeInSlideUp {
+        /* Keyframes for the enhanced fade-in, slide-up, and scale animation */
+        @keyframes fadeInSlideUpScale {
             to {
                 opacity: 1; /* Fade in */
-                transform: translateY(0); /* Move to original position */
+                transform: translateY(0) scale(1); /* Move to original position and scale */
             }
         }
 
-        /* Staggering the animation delays for each line */
-        /* We use :nth-child to target each line specifically */
+        /* Staggering the animation delays for each line (same as before) */
         .text-line:nth-child(1) {
-            animation-delay: 0.5s; /* First line appears after 0.5s */
+            animation-delay: 0.5s;
         }
         .text-line:nth-child(2) {
-            animation-delay: 2.0s; /* Second line appears after 2.0s */
+            animation-delay: 2.3s; /* Adjusted timing slightly */
         }
         .text-line:nth-child(3) {
-            animation-delay: 3.5s; /* Third line appears after 3.5s */
+            animation-delay: 4.1s;
         }
         .text-line:nth-child(4) {
-            animation-delay: 5.0s; /* Fourth line appears after 5.0s */
+            animation-delay: 5.9s;
         }
         .text-line:nth-child(5) {
-            animation-delay: 6.5s; /* Fifth line appears after 6.5s */
+            animation-delay: 7.7s;
         }
         .text-line:nth-child(6) {
-            animation-delay: 8.0s; /* Sixth line appears after 8.0s */
+            animation-delay: 9.5s;
         }
 
         /* Responsive font size */
         @media (max-width: 600px) {
             .text-line {
-                font-size: 1.8rem; /* Smaller font on smaller screens */
+                font-size: 2rem; /* Adjust for smaller screens */
             }
         }
          @media (max-width: 400px) {
             .text-line {
-                font-size: 1.5rem; /* Even smaller font */
+                font-size: 1.7rem; /* Further adjust */
             }
         }
     </style>
